--- a/view/login/index.html
+++ b/view/login/index.html
@@ -11,7 +11,7 @@
     <div class="bg-image"></div>
     <div class="filter-blur"></div>
     <div class="login-container">
-        <img src="logovcaluga.jpg" alt="Você Aluga" class="logo">
+        <img src="../resources/img/logovcaluga.jpg" alt="Você Aluga" class="logo">
         <input placeholder="Usuário" type="text">
         <input placeholder="Senha" type="password" >
         <p class="forgot-password">Esqueci minha senha</p>
