--- a/view/cadastrov2_cliente/index.html
+++ b/view/cadastrov2_cliente/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <meta charset="utf-8">
     <link rel="stylesheet" href="style.css">
     <title>Registro de Cliente</title>
 </head>
 <body>
     <div class="bg-image"></div>
     <div class="filter-blur"></div>
-    <h2>Registro de Motorista</h2>
+    <h2>Registro de Cliente</h2>
     <form id="registro-form">
         <!-- Campos para Pessoa Física -->
         <div id="pessoa_fisica_fields">
@@ -23,7 +24,7 @@
             <label for="data_nascimento">Data de Nascimento:</label>
             <input type="date" name="data_nascimento" required><br>
 
-            <label for="cpf">CPF:</label>
+            <label for="cpf">CPF/CNPJ:</label>
             <input type="text" name="cpf" required><br>
         </div>
         <!-- Campos para Pessoa Jurídica -->
@@ -34,11 +35,6 @@
             <label for="cnpj">CNPJ:</label>
             <input type="text" name="cnpj" required><br>
         </div> 
-        <label for="renavam">RENAVAM:</label>
-        <input type="text" name="renavam" required><br>
-
-        <label for="ads">ADS:</label>
-        <input type="text" name="ads" required><br>
 
         <input type="submit" value="Registrar">
     </form>
