--- a/view/login/style.css
+++ b/view/login/style.css
@@ -16,12 +16,14 @@ body{
     background-position: center;
     height: 100%;
     width: 100%;
+    -webkit-backdrop-filter: blur(15px);
     backdrop-filter: blur(15px);
     position: fixed;
     z-index: 1;
 }
 .filter-blur{
     background: rgba(255, 255, 255, 0.5);
+    -webkit-backdrop-filter: blur(15px);
     backdrop-filter: blur(5px);
     position: absolute;
     width: 100%;
