changed input names

--- a/view/cadastro_v2_motorista/index.html
+++ b/view/cadastro_v2_motorista/index.html
@@ -35,7 +35,7 @@
             <label for="cnpj">CNPJ:</label>
             <input type="text" name="cnpj" required><br>
         </div> 
-        <label for="renavam">RENAVAM:</label>
+        <label for="renavam">CNH:</label>
         <input type="text" name="renavam" required><br>
 
         <label for="ads">ADS:</label>
