--- a/view/cadastrov2_usuario/index.html
+++ b/view/cadastrov2_usuario/index.html
@@ -39,7 +39,7 @@
             <input type="radio" name="tipo_cliente" value="adm" id="adm_radio" checked> Administrador
             <input type="radio" name="tipo_cliente" value="user" id="usr_radio"> Funcionário
         </div>
-        <label for="ads">CTPS (Admin):</label>
+        <label for="ads">CTPS:</label>
         <input type="text" name="ads" required><br>
 
         <input type="submit" value="Registrar">
