--- a/view/cadastrov2_cliente/index.html
+++ b/view/cadastrov2_cliente/index.html
@@ -23,9 +23,12 @@
 
             <label for="data_nascimento">Data de Nascimento:</label>
             <input type="date" name="data_nascimento" required><br>
+            
+            <label for="cpf">CPF:</label>
+            <input type="text" name="cpf"><br>
 
-            <label for="cpf">CPF/CNPJ:</label>
-            <input type="text" name="cpf" required><br>
+            <label for="cpf">CNPJ:</label>
+            <input type="text" name="cnpj"><br>
         </div>
         <!-- Campos para Pessoa Jurídica -->
         <div id="pessoa_juridica_fields" style="display: none;">
