--- a/view/home/index.html
+++ b/view/home/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Você Aluga - Home</title>
+    <title>Você Aluga - Início</title>
 </head>
 <body>
     <header>
@@ -21,25 +21,28 @@
     </header>
 
     <section class="hero">
-        <h2>Alugue um Carro Agora!</h2>
-        <p>Explore nossa ampla seleção de carros e escolha o que se adequa às suas necessidades.</p>
-        <a href="#" class="btn">Ver Carros Disponíveis</a>
+        <h2>Alugue um Grupo de Veículos Agora!</h2>
+        <p>Explore nossa ampla seleção de veículos e escolha o que se adequa às suas necessidades.</p>
+        <h3>Veja as opções disponíveis abaixo</h3>
     </section>
 
     <section class="features">
         <div class="feature">
-            <img src="car-icon.png" alt="Car Icon">
-            <h3>Variedade de Modelos</h3>
+            <img src="../resources/img/audi_sml.jpg" alt="Car Icon">
+            <h3>Grupo 1</h3>
+            <a href="#" class="btn">Alugar Carros</a>
             <p>Escolha entre uma ampla variedade de modelos de carros, desde compactos até SUVs.</p>
         </div>
         <div class="feature">
-            <img src="key-icon.png" alt="Key Icon">
-            <h3>Processo Simples</h3>
+            <img src="../resources/img/van_sml.jpg" alt="Key Icon">
+            <h3>Grupo 2</h3>
+            <a href="#" class="btn">Alugar Vans</a>
             <p>O processo de aluguel é simples e fácil. Reserve o seu carro em poucos cliques.</p>
         </div>
         <div class="feature">
-            <img src="support-icon.png" alt="Support Icon">
-            <h3>Suporte 24/7</h3>
+            <img src="../resources/img/bus_sml.jpg" alt="Support Icon">
+            <h3>Grupo 3</h3>
+            <a href="#" class="btn">Alugar Ônibus</a>
             <p>Nosso suporte ao cliente está disponível 24 horas por dia, 7 dias por semana para ajudá-lo.</p>
         </div>
     </section>
