tweaks with css

--- a/view/home/index.html
+++ b/view/home/index.html
@@ -34,13 +34,13 @@
             <p>Escolha entre uma ampla variedade de modelos de carros, desde compactos até SUVs.</p>
         </div>
         <div class="feature">
-            <img src="../resources/img/van_sml.jpg" alt="Key Icon">
+            <img src="../resources/img/van_sml.jpg" alt="Van Icon">
             <h3>Grupo 2</h3>
             <a href="#" class="btn">Alugar Vans</a>
             <p>O processo de aluguel é simples e fácil. Reserve o seu carro em poucos cliques.</p>
         </div>
         <div class="feature">
-            <img src="../resources/img/bus_sml.jpg" alt="Support Icon">
+            <img src="../resources/img/bus_sml.jpg" alt="Bus Icon">
             <h3>Grupo 3</h3>
             <a href="#" class="btn">Alugar Ônibus</a>
             <p>Nosso suporte ao cliente está disponível 24 horas por dia, 7 dias por semana para ajudá-lo.</p>
