--- a/view/locacao/index.html
+++ b/view/locacao/index.html
@@ -70,9 +70,7 @@
                 <input type="text" id="driver-license" name="driver-license">
             </div>
 
-            <!-- ... (outros campos) ... -->
-
-            <button type="button" onclick="submitPayment()">Pagar</button>
+            <button type="button" onclick="onClickPayment()">Pagar</button>
         </form>
     </div>
 
