--- a/view/locacao/index.html
+++ b/view/locacao/index.html
@@ -11,10 +11,10 @@
         <form id="payment-form" class="payment-container">  
             <h1>Detalhes da Locação</h1> 
             <label for="dataInicio">Data de Início:</label>
-            <input type="date" id="dataInicio" name="dataInicio" required>
+            <input type="text" id="dataInicio" name="dataInicio" required>
 
             <label for="dataFim">Data de Fim:</label>
-            <input type="date" id="dataFim" name="dataFim" required>
+            <input type="text" id="dataFim" name="dataFim" required>
             
             <label for="amount">Valor do Aluguel:</label>
             <input type="text" id="amount" name="amount" required>
@@ -41,17 +41,10 @@
             <div id="credit-card-details" class="hidden">
                 <label for="credit-card-number">Número do Cartão:</label>
                 <input type="text" id="credit-card-number" name="credit-card-number" required>
-
-                <label for="expiry-date">Data de Validade:</label>
-                <input type="text" id="expiry-date" name="expiry-date" required>
-
-                <label for="cvv">CVV:</label>
-                <input type="text" id="cvv" name="cvv" required>
             </div>
 
             <label for="billing-address">Endereço de Cobrança:</label>
             <textarea id="billing-address" name="billing-address" rows="4" required></textarea>
-
 
             <div id="driver-details" class="hidden">
                 <h2>Cadastro de Motorista</h2>
@@ -60,7 +53,7 @@
                 <label for="email">Email:</label>
                 <input type="email" name="email" required><br>
                 <label for="data_nascimento">Data de Nascimento:</label>
-                <input type="date" name="data_nascimento" required><br>
+                <input type="text" name="data_nascimento" required><br>
                 <label for="cpf">CPF:</label>
                 <input type="text" name="cpf" required><br>
                 <label for="driver-license">Número da CNH:</label>
