added redirections and valor total

--- a/view/locacao/index.html
+++ b/view/locacao/index.html
@@ -22,6 +22,9 @@
             <label for="amount">Valor do Aluguel:</label>
             <input type="text" id="amount" name="amount" required>
             
+            <label for="amount">Valor Total:</label>
+            <input type="text" id="total-amount" name="total-amount" required>
+
             <div class="driver-option">
                 <label for="driver-yes">O cliente é motorista?</label>
                 <div>
