--- a/view/home/index.html
+++ b/view/home/index.html
@@ -29,19 +29,19 @@
         <div class="feature">
             <img src="../resources/img/audi_sml.jpg" alt="Car Icon">
             <h3>Grupo 1</h3>
-            <a href="#" class="btn">Alugar Carros</a>
+            <a href="../locacao/index.html" class="btn">Alugar Carros</a>
             <p>Escolha entre uma ampla variedade de modelos de carros, desde compactos até SUVs.</p>
         </div>
         <div class="feature">
             <img src="../resources/img/van_sml.jpg" alt="Van Icon">
             <h3>Grupo 2</h3>
-            <a href="#" class="btn">Alugar Vans</a>
+            <a href="../locacao/index.html" class="btn">Alugar Vans</a>
             <p>O processo de aluguel é simples e fácil. Reserve o seu carro em poucos cliques.</p>
         </div>
         <div class="feature">
             <img src="../resources/img/bus_sml.jpg" alt="Bus Icon">
             <h3>Grupo 3</h3>
-            <a href="#" class="btn">Alugar Ônibus</a>
+            <a href="../locacao/index.html" class="btn">Alugar Ônibus</a>
             <p>Nosso suporte ao cliente está disponível 24 horas por dia, 7 dias por semana para ajudá-lo.</p>
         </div>
     </section>
