removed endereco de cobranca

--- a/view/locacao/index.html
+++ b/view/locacao/index.html
@@ -48,11 +48,8 @@
                 <label for="credit-card-number">Número do Cartão:</label>
                 <input type="text" id="credit-card-number" name="credit-card-number" required>
             </div>
-
-            <label for="billing-address">Endereço de Cobrança:</label>
-            <textarea id="billing-address" name="billing-address" rows="4" required></textarea>
-
-            <label for="billing-address">Descrição de Pagamento:</label>
+            
+            <label for="payment-description">Descrição de Pagamento:</label>
             <textarea id="payment-description" name="payment-description" rows="4" required></textarea>
 
             <div id="driver-details" class="hidden">
