fixed cadastro and added script

--- a/view/login/index.html
+++ b/view/login/index.html
@@ -4,19 +4,21 @@
     <meta charset="UTF-8">
     <meta http-equiv= "X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login Você Aluga</title>
+    <title>Login - Você Aluga</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <form id="login-form" class="bg-image filter-blur login-container">
     <div class="bg-image"></div>
     <div class="filter-blur"></div>
     <div class="login-container">
         <img src="../resources/img/logovcaluga.jpg" alt="Você Aluga" class="logo">
         <input placeholder="Usuário" type="text">
         <input placeholder="Senha" type="password" >
-        <p class="forgot-password">Esqueci minha senha</p>
-        <p class="sign-up"> Ainda não é cliente? <a href="#">Cadastrar-se</a></p>
-        <button>Entrar</button>
+        <p class="sign-up"> Ainda não é cliente? <a href="../cadastrov2_cliente/index.html" title="Cadastrar-se">Cadastrar-se</a></p>
+        <button type="submit">Entrar</button>
     </div>
+    </form>
 </body>
+<script src = "script.js"> </script>
 </html>
